Fix CTA (currently just linking to 2016 Impact Report) alignment in content

--- a/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
@@ -47,7 +47,7 @@
       width: 75%;
       margin: 0;
 
-      .et_pb_text, .et_pb_column_4_4 > .et_pb_video, .et_pb_button_module_wrapper, .staff-list {
+      .et_pb_text, .et_pb_column_4_4 > .et_pb_video, .et_pb_button_module_wrapper, .staff-list, .et_pb_promo {
         padding-left: 20px;
         padding-right: 20px;
         max-width: 66.666%;
